prevent hero layout shift

--- a/rails_app/app/assets/stylesheets/dc-root.css
+++ b/rails_app/app/assets/stylesheets/dc-root.css
@@ -18,7 +18,9 @@ pennlibs-footer {
 }
 
 pennlibs-hero {
+  display: block;
   --pl-hero-height: clamp(32rem, 62vh, 62vh);
+  min-height: var(--pl-hero-height);
 }
 
 *:focus {
